# myrt

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  rnu.natvis  xgl.natvis
res/: mup.xsh  plane.mtl  podium.mtl
res/christmas_photo/: negx.hdr  negy.hdr  negz.hdr  posx.hdr  posy.hdr  posz.hdr
src/: CMakeLists.txt  bunny.h  cl.hpp  cube.hpp  gl.hpp  gl_current.cpp  gl_current.hpp  main.cpp  material.hpp  myrt.cpp  obj.cpp  obj.hpp  plate_of_beans.hpp  resources.hpp  sdf.hpp  sfml.hpp  suzanne.hpp  teapot.h  teapot_low.h  thread_pool.cpp  thread_pool.hpp  types.hpp
src/dynamic/: material.cpp  material.hpp  object.cpp  object.hpp  property.cpp  property.hpp  test_material.glsl  xgl_parser.cpp  xgl_parser.hpp  xgl_parser2.cpp  xgl_parser2.hpp  xgl_tokenizer.cpp  xgl_tokenizer.hpp
src/ecs/: component.hpp  ecs.cpp  ecs.hpp  ecs.inl  entity.hpp  flags.hpp  flags.inl  listener.hpp  system.cpp  system.hpp
src/glad/: glad.cpp  glad.h
src/glsl/: brdf.h  bvh.h  bvh.impl.h  ggx.h  interface.h  intersect.h  intersect_triangle.h  pathtracer.frag  pathtracer.vert  pathtracer_internal.h  raymarch.h  tonemapping.h
src/mygl/: CMakeLists.txt  mygl.cpp
src/mygl/include/mygl/: mygl.hpp  mygl_enums.hpp  mygl_extensions.hpp  mygl_functions.hpp  mygl_functions.inl  mygl_loader.hpp  mygl_loader.inl  mygl_types.hpp
src/myrt.sfml/: CMakeLists.txt  gl.cpp  sfml.cpp  utils.cpp
src/myrt.sfml/include/myrt/sfml/: gl.hpp  sfml.hpp  utils.hpp
src/myrt.video/: CMakeLists.txt  main.cpp
src/myrt.vk/: CMakeLists.txt  base.cpp  base.hpp  forward.frag  forward.vert  fxaa.frag  resolve.frag  resolve.vert  screen.vert  shader_build.cpp  shader_build.hpp  test_include.glsl  test_shader.glsl  vk.cpp
src/myrt.xgl/: CMakeLists.txt  test.xgl  xgl_entities.cpp  xgl_evaluator.cpp  xgl_grammar.cpp  xgl_parser.cpp  xgl_scope_system.cpp  xgl_tokenizer.cpp
src/myrt.xgl/include/myrt/xgl/: xgl_entities.hpp  xgl_evaluator.hpp  xgl_grammar.hpp  xgl_parser.hpp  xgl_scope_system.hpp  xgl_tokenizer.hpp
src/pathtracer/: bindings.cpp  bindings.hpp  bvh.cpp  bvh.hpp  forward_renderer.cpp  forward_renderer.hpp  material.cpp  material.hpp  parameter.cpp  parameter.hpp  parameterized.cpp  parameterized.hpp  pathtracer.cpp  pathtracer.frag  pathtracer.hpp  pathtracer.vert  pathtracer_internal.frag  post_process.cpp  post_process.hpp  scene.cpp  scene.hpp  sdf.cpp  sdf.hpp  sequential_pathtracer.cpp  sequential_pathtracer.hpp  texture_array.cpp  texture_array.hpp  texture_provider.cpp  texture_provider.hpp  utils.cpp  utils.hpp
src/pt/: bokeh.glsl  bvh.glsl  bvh.impl.glsl  color.glsl  fwd_generate.comp  intersect.glsl  material.glsl  material_new.glsl  pbr.glsl  pbr_material.glsl  pp_add.comp  pp_blur.comp  pp_cutoff.comp  pp_denoise.comp  pp_fxaa.comp  pp_ssao.comp  pp_tonemap.comp  pp_tonemap_filmic.cl  pt_color.comp  pt_generate.comp  pt_ray_filter.comp  pt_trace.comp  random.glsl  raymarch.glsl  resample.glsl  sky.glsl  transform.glsl
src/pt/forward/: frag.frag  resolve.frag  resolve.vert  vert.vert
src/vectoring/: distance.hpp  vectoring.hpp
